# fantasy-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  custom_gpt_prompt.md  pyproject.toml
.github/workflows/: docker.yml
docker/: .env.runtime  portainer-stack.yaml
openapi/: openapi.yaml
scripts/: yahoo_auth.py
src/: app.py  deps.py  models.py  settings.py  yahoo_client.py
tests/: conftest.py  test_auth.py  test_favorites.py  test_params_validation.py  test_privacy.py  test_settings.py  test_yahoo_client_oauth.py
tests/_data/: example_transactions.json  yahoo_token_response.json
