[project]
name = "fantasy-api"
version = "0.1.0"
description = "FastAPI service exposing Yahoo Fantasy NFL data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "yahoo-oauth==2.0",
    "yahoo_fantasy_api==2.6.0",
    "httpx==0.27.0",
    "requests==2.32.3",
    "structlog==24.1.0",
    "limits==3.10.1",
    "starlette-exporter==0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
